--- a/A/templates/base.html
+++ b/A/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     {% include 'inc/navbar.html'%}
     <div class="jumbotron">
-
+        {% include 'inc/messege.html'%}
         {% block content %} {% endblock content %}
     </div>
 
