--- a/A/templates/inc/navbar.html
+++ b/A/templates/inc/navbar.html
@@ -1,6 +1,13 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home:home'%}">Navbar</a>
+        {% if request.user.is_authenticated %}
+        <a class="navbar-brand" href="{% url 'account:user_logout'%}">Logout</a>
+        <a class="navbar-brand" href="{% url 'account:user_profile' request.user.id %}">Profile</a>
+        {%else%}
+        <a class="navbar-brand" href="{% url 'account:user_register'%}">Register</a>
+        <a class="navbar-brand" href="{% url 'account:user_login'%}">Login</a>
+        {% endif %}
           <!-- name space : name file in template-->
       </div>
     </nav>
