--- a/A/home/templates/home/index.html
+++ b/A/home/templates/home/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    index page
+    <div class="card">
+        {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.body|truncatewords:8}}</a>
+        {%endfor%}
+    </div>
 {% endblock content %}
