--- a/A/account/templates/account/profile.html
+++ b/A/account/templates/account/profile.html
@@ -2,4 +2,14 @@
 
 {% block content %}
     <h2 class="text-center">{{ user.username }}</h2>
+
+    {% if request.user.id == user.id %}
+        <a href="{% url 'home:post_create' %}" class="btn btn-primary">Create</a>
+    {% endif %}
+
+        <div class="card">
+        {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.body|truncatewords:8}}</a>
+        {%endfor%}
+    </div>
 {% endblock content %}
