--- a/A/account/templates/account/profile.html
+++ b/A/account/templates/account/profile.html
@@ -7,9 +7,16 @@
         <a href="{% url 'home:post_create' %}" class="btn btn-primary">Create</a>
     {% endif %}
 
+    {% if request.user.id != user.id and not is_following %}
+        <a href="{% url 'account:user_follow' user.id %}" class="btn btn-primary">Follow</a>
+    {% elif request.user.id != user.id and is_following %}
+        <a href="{% url 'account:user_unfollow' user.id %}" class="btn btn-primary">Unfollow</a>
+    {% endif %}
+
+
         <div class="card">
         {% for post in posts %}
             <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.body|truncatewords:8}}</a>
-        {%endfor%}
+        {% endfor %}
     </div>
 {% endblock content %}
