--- a/A/home/templates/home/detail.html
+++ b/A/home/templates/home/detail.html
@@ -5,5 +5,15 @@
         <a href="{% url 'home:post_update' post.id %}" class="btn btn-info">Update</a>
     {% endif %}
     <p><a href="{% url 'account:user_profile' post.user.id %}"> {{ post.user.username }} </a> - {{ post.updated|date:"Y-M" }}</p>
-    <p>{{ post.body }}</p>
+    <p>{{ post.body }}</p><hr/>
+
+    <p>{{ comments.count }}comments</p>
+    {% for comment in comments %}
+        <div class="card bg-dark text-white">
+            <p class="card-header">{{ comment.user }} | {{ comment.created | timesince }}</p>
+            <p class="card-body">{{ comment.body }}</p>
+        </div>
+    {% empty %}
+        <p>No coomments yet!</p>
+    {% endfor %}
 {% endblock content %}
