--- a/A/home/templates/home/detail.html
+++ b/A/home/templates/home/detail.html
@@ -7,12 +7,37 @@
     <p><a href="{% url 'account:user_profile' post.user.id %}"> {{ post.user.username }} </a> - {{ post.updated|date:"Y-M" }}</p>
     <p>{{ post.body }}</p><hr/>
 
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'home:post_like' post.id%}" class="{% if can_like %}disabled{% endif %} btn btn-primary col-md-2">{{ post.likes_count }}Like</a>
+        <form action="" method="post" novalidate>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Send">
+        </form><br/>
+    {%else%}
+        <p class="alert alert-danger">Only logged in users can comment.</p>
+    {% endif %}
+
     <p>{{ comments.count }}comments</p>
     {% for comment in comments %}
         <div class="card bg-dark text-white">
             <p class="card-header">{{ comment.user }} | {{ comment.created | timesince }}</p>
             <p class="card-body">{{ comment.body }}</p>
-        </div>
+
+            {% if request.user.is_authenticated %}
+            <form action="{% url 'home:add_reply' post.id comment.id %}" method="post" style="display:none;" novalidate>
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Send">
+            </form>
+            {%endif%}
+
+            {% with replies=comment.rcomments.all %}
+                {% for reply in replies %}
+                    <p class="bg-primary p-3 m-2">{{ reply.user }} <br/> {{ reply.body }}</p>
+                {% endfor %}
+            {% endwith %}
+        </div><br/>
     {% empty %}
         <p>No coomments yet!</p>
     {% endfor %}
