--- a/A/home/templates/home/index.html
+++ b/A/home/templates/home/index.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+    <form action="" method="get" >
+            {{ form.as_p }}
+            <input type="submit" value="Search">
+        </form><br/>
+
+
     <div class="card">
         {% for post in posts %}
             <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.body|truncatewords:8}}</a>
